# marcvox

./: CMakeLists.txt  LICENSE  templeRing.tsk
results/2016-080_18-37-08/: ply_level_0.ply  ply_level_1.ply  ply_level_2.ply  ply_level_3.ply  ply_level_4.ply  ply_level_5.ply  ply_level_6.ply
src/: imgprocess.cpp  imgprocess.h  main.cpp  ply.cpp  tasks.cpp  tasks.h
